network-policies/external-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: external-client
  namespace: external-ns
  labels:
    app: external-client
spec:
  containers:
  - name: client
    image: busybox:1.35
    command: ['sleep', '3600']
